unpackaged/main/default/objects/FPS__Group_Assignment_Rule__mdt/FPS__Group_Assignment_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Rules for assigning permission set groups based on user profile names.</description>
    <label>Fonteva Group Assignment Rule</label>
    <pluralLabel>Fonteva Group Assignment Rules</pluralLabel>
</CustomObject>