unpackaged/main/default/objects/FPS__Group_Assignment_Rule__mdt/fields/FPS__Group_Name__c.field-meta.xml
<CustomField>
    <fullName>FPS__Group_Name__c</fullName>
    <description>The API name of the permission set group to assign (the PermissionSetGroup.DeveloperName field).</description>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>