unpackaged/main/default/objects/FPS__Group_Assignment_Rule__mdt/fields/FPS__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FPS__Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the permission set group assignment rule is enabled.</description>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>