unpackaged/main/default/objects/FPS__Group_Assignment_Rule__mdt/fields/FPS__Match_Type__c.field-meta.xml
<CustomField>
    <fullName>FPS__Match_Type__c</fullName>
    <description>How to match the user profile name.  If set to &quot;Exact&quot;, the profile name must exactly match (this match is case-sensitive).  If set to &quot;Like&quot;, the profile name can have &quot;%&quot; characters to do wildcard matching similar to the SOQL LIKE operator (this match is case-insensitive).  If set to &quot;Regex&quot;, the profile name is an Apex regular expression (case sensitivity is controlled by the regular expression).</description>
    <label>Match Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>Exact</label>
            </value>
            <value>
                <fullName>Like</fullName>
            </value>
            <value>
                <fullName>Regex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>