unpackaged/main/default/objects/FPS__Group_Assignment_Rule__mdt/fields/FPS__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>FPS__Profile_Name__c</fullName>
    <description>The name of the profile that is used to assign users to the permission set group.</description>
    <label>Profile Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>